--- a/Chapter_Ito.qmd
+++ b/Chapter_Ito.qmd
@@ -389,7 +389,7 @@ Here are some important examples of Ito's formula.
 If $Y = X^\alpha$ for a constant $\alpha$, then
 $$\mathrm{d} Y = \alpha X^{\alpha-1}\mathrm{d} X + \frac{1}{2}\alpha (\alpha - 1)X^{\alpha-2}(\mathrm{d} X)^2\,.$$
 This is equivalent to 
-$$\frac{\mathrm{d} Y}{Y} = \alpha \frac{\mathrm{d} X}{X} + \frac{\alpha(\alpha-1)}{2}\left(\frac{\mathrm{d} X}{X}\right)^2\,.$${#ito-powerformula}
+$$\frac{\mathrm{d} Y}{Y} = \alpha \frac{\mathrm{d} X}{X} + \frac{\alpha(\alpha-1)}{2}\left(\frac{\mathrm{d} X}{X}\right)^2\,.$$ {#eq-ito-powerformula}
 :::
 
 ::: Rule
