--- a/Chapter_Trees.qmd
+++ b/Chapter_Trees.qmd
@@ -77,7 +77,7 @@ $$S = \pi_u S_u + \pi_d S_d$$ {#eq-oneperiodstateprices2}
 and
 $$1 = \pi_u \mathrm{e}^{rt} + \pi_d \mathrm{e}^{rt}\,.$$ {#eq-oneperiodstateprices3}
 
-It is useful to envision hypothetical securities that pay \$1 in a single state and 0 in the other.  We can regard $\pi_u$ as the price of the up security and $\pi_d$ as the price of the down security.^[These hypothetical securities are called Arrow securities in recognition of the seminal insights of Kenneth J. Arrow.]  We call them **state prices.** @eq-oneperiodstateprices1--@eq-oneperiodstateprices3 show that we can value each of the actual assets---the call option, the underlying asset, and the risk-free asset---can be valued as a portfolio, breaking the asset down into a payoff in the up state and a payoff in the down state and pricing the payoffs using the state prices. Our no-arbitrage condition $S_u/S > \mathrm{e}^{rt} > S_d/S$ implies that the state prices are positive---it costs something today to get something in the future.
+It is useful to envision hypothetical securities that pay \$1 in a single state and 0 in the other.  We can regard $\pi_u$ as the price of the up security and $\pi_d$ as the price of the down security.^[These hypothetical securities are called Arrow securities in recognition of the seminal insights of Kenneth J. Arrow.]  We call them **state prices.** @eq-oneperiodstateprices1--@eq-oneperiodstateprices3 show that we can value each of the actual assets---the call option, the underlying asset, and the risk-free asset---as a portfolio, breaking the asset down into a payoff in the up state and a payoff in the down state and pricing the payoffs using the state prices. Our no-arbitrage condition $S_u/S > \mathrm{e}^{rt} > S_d/S$ implies that the state prices are positive---it costs something today to get something in the future.
 
 #### Risk-Neutral Pricing
 
